--- a/package.json
+++ b/package.json
@@ -11,22 +11,33 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:style": "stylelint '**/*.{css,vue}'",
-    "lint:style:fix": "stylelint '**/*.{css,vue}' --fix"
+    "lint:style:fix": "stylelint '**/*.{css,vue}' --fix",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:seed": "bun ./server/db/seed.ts"
   },
   "dependencies": {
+    "@libsql/client": "^0.14.0",
     "@nuxt/eslint": "^0.6.0",
     "@nuxt/fonts": "^0.10.1",
+    "@pinia/nuxt": "^0.5.5",
     "@vee-validate/zod": "^4.14.6",
     "@vueuse/core": "^11.1.0",
+    "better-sqlite3": "^11.5.0",
+    "drizzle-orm": "^0.35.3",
     "lucide-vue-next": "^0.453.0",
     "modern-normalize": "^3.0.1",
     "nuxt": "^3.13.2",
+    "oslo": "^1.2.1",
     "vee-validate": "^4.14.6",
     "vue": "latest",
     "vue-router": "latest",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
     "eslint-plugin-oxlint": "^0.10.1",
     "oxlint": "^0.10.2",
