--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "modern-normalize": "^3.0.1",
     "nuxt": "^3.13.2",
     "oslo": "^1.2.1",
+    "sqlocal": "^0.12.0",
     "vee-validate": "^4.14.6",
     "vue": "latest",
     "vue-router": "latest",
