--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
+    "serve": "node --env-file=.env .output/server/index.mjs",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -18,33 +19,31 @@
     "db:seed": "bun ./server/db/seed.ts"
   },
   "dependencies": {
-    "@ark-ui/vue": "^4.4.2",
-    "@libsql/client": "^0.14.0",
-    "@nuxt/eslint": "^0.7.1",
-    "@nuxt/fonts": "^0.10.2",
-    "@pinia/nuxt": "^0.7.0",
-    "@vee-validate/zod": "^4.14.7",
-    "@vueuse/core": "^11.2.0",
-    "better-sqlite3": "^11.5.0",
-    "drizzle-orm": "^0.36.3",
-    "lucide-vue-next": "^0.460.0",
+    "@ark-ui/vue": "^5.5.0",
+    "@libsql/client": "^0.15.2",
+    "@nuxt/eslint": "^1.3.0",
+    "@nuxt/fonts": "^0.11.1",
+    "@pinia/nuxt": "^0.10.1",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^13.0.0",
+    "drizzle-orm": "^0.41.0",
+    "lucide-vue-next": "^0.487.0",
     "modern-normalize": "^3.0.1",
-    "nuxt": "^3.14.1592",
+    "nuxt": "^3.16.2",
     "oslo": "^1.2.1",
-    "sqlocal": "^0.12.0",
-    "vee-validate": "^4.14.7",
+    "sqlocal": "^0.14.0",
+    "vee-validate": "^4.15.0",
     "vue": "latest",
     "vue-router": "latest",
-    "zod": "^3.23.8"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.12",
-    "drizzle-kit": "^0.28.1",
-    "eslint": "^9.15.0",
-    "eslint-plugin-oxlint": "^0.12.0",
-    "oxlint": "^0.12.0",
-    "stylelint": "^16.10.0",
-    "stylelint-config-clean-order": "^6.1.0",
-    "stylelint-config-recommended-vue": "^1.5.0"
+    "drizzle-kit": "^0.30.6",
+    "eslint": "^9.24.0",
+    "eslint-plugin-oxlint": "^0.16.5",
+    "oxlint": "^0.16.5",
+    "stylelint": "^16.18.0",
+    "stylelint-config-clean-order": "^7.0.0",
+    "stylelint-config-recommended-vue": "^1.6.0"
   }
 }
