--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-app",
+  "name": "gelios",
   "private": true,
   "type": "module",
   "scripts": {
@@ -7,7 +7,11 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "serve": "node --env-file=.env ./.output/server/index.mjs",
+    "serve:local": "cross-env PORT=4000 node --env-file=.env ./.output/server/index.mjs",
+    "serve:local:3000": "cross-env PORT=3000 bun run serve:local",
+    "serve:local:3001": "cross-env PORT=3001 bun run serve:local",
+    "serve:local:3002": "cross-env PORT=3002 bun run serve:local",
+    "serve:local:balance": "npm-run-all --parallel serve:local:3000 serve:local:3001 serve:local:3002",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -25,7 +29,7 @@
     "@nuxt/fonts": "^0.11.1",
     "@pinia/nuxt": "^0.10.1",
     "@vee-validate/zod": "^4.15.0",
-    "@vueuse/core": "^13.0.0",
+    "@vueuse/core": "^13.1.0",
     "drizzle-orm": "^0.41.0",
     "lucide-vue-next": "^0.487.0",
     "modern-normalize": "^3.0.1",
@@ -40,8 +44,9 @@
     "drizzle-kit": "^0.30.6",
     "eslint": "^9.24.0",
     "eslint-plugin-oxlint": "^0.16.5",
+    "npm-run-all": "^4.1.5",
     "oxlint": "^0.16.5",
-    "stylelint": "^16.18.0",
+    "cross-env": "^7.0.3",
     "stylelint-config-clean-order": "^7.0.0",
     "stylelint-config-recommended-vue": "^1.6.0"
   }
