--- a/.nginx/nginx.conf
+++ b/.nginx/nginx.conf
@@ -8,6 +8,10 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    gzip on;
+    gzip_types *;
+    gzip_comp_level 6;
+
     upstream backend {
         server nuxt1:3000;
         server nuxt2:3001;
