--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "serve:local": "cross-env PORT=4000 node --env-file=.env ./.output/server/index.mjs",
-    "serve:local:3000": "cross-env PORT=3000 bun run serve:local",
-    "serve:local:3001": "cross-env PORT=3001 bun run serve:local",
-    "serve:local:3002": "cross-env PORT=3002 bun run serve:local",
+    "serve:local": "node --env-file=.env ./.output/server/index.mjs",
+    "serve:local:3000": "cross-env PORT=3000 npm run serve:local",
+    "serve:local:3001": "cross-env PORT=3001 npm run serve:local",
+    "serve:local:3002": "cross-env PORT=3002 npm run serve:local",
     "serve:local:balance": "npm-run-all --parallel serve:local:3000 serve:local:3001 serve:local:3002",
     "postinstall": "nuxt prepare",
     "lint": "eslint .",
