--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "serve:local": "node --env-file=.env ./.output/server/index.mjs",
+    "serve:local": "dotenv -e .env -- node .output/server/index.mjs",
     "serve:local:3000": "cross-env PORT=3000 npm run serve:local",
     "serve:local:3001": "cross-env PORT=3001 npm run serve:local",
     "serve:local:3002": "cross-env PORT=3002 npm run serve:local",
@@ -30,6 +30,7 @@
     "@pinia/nuxt": "^0.10.1",
     "@vee-validate/zod": "^4.15.0",
     "@vueuse/core": "^13.1.0",
+    "dotenv-cli": "^8.0.0",
     "drizzle-orm": "^0.41.0",
     "lucide-vue-next": "^0.487.0",
     "modern-normalize": "^3.0.1",
