--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - .env
       
   nginx:
-    image: nginx:1.25-alpine
+    image: nginx:alpine
     ports:
       - "80:80"
     volumes:
