--- a/nginx.conf
+++ b/nginx.conf
@@ -13,9 +13,7 @@ http {
     gzip_comp_level 6;
 
     upstream backend {
-        server nuxt1:3000;
-        server nuxt2:3001;
-        server nuxt3:3002;
+        server nuxt:3000;
     }
 
     server {
